; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/avr32/mach-at32ap/extr_extint.c_eic_mask_ack_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/avr32/mach-at32ap/extr_extint.c_eic_mask_ack_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eic = type { i32 }

@ICR = common dso_local global i32 0, align 4
@IDR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @eic_mask_ack_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @eic_mask_ack_irq(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.eic*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.eic* @get_irq_chip_data(i32 %4)
  store %struct.eic* %5, %struct.eic** %3, align 8
  %6 = load %struct.eic*, %struct.eic** %3, align 8
  %7 = load i32, i32* @ICR, align 4
  %8 = load i32, i32* %2, align 4
  %9 = load %struct.eic*, %struct.eic** %3, align 8
  %10 = getelementptr inbounds %struct.eic, %struct.eic* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = sub i32 %8, %11
  %13 = shl i32 1, %12
  %14 = call i32 @eic_writel(%struct.eic* %6, i32 %7, i32 %13)
  %15 = load %struct.eic*, %struct.eic** %3, align 8
  %16 = load i32, i32* @IDR, align 4
  %17 = load i32, i32* %2, align 4
  %18 = load %struct.eic*, %struct.eic** %3, align 8
  %19 = getelementptr inbounds %struct.eic, %struct.eic* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = sub i32 %17, %20
  %22 = shl i32 1, %21
  %23 = call i32 @eic_writel(%struct.eic* %15, i32 %16, i32 %22)
  ret void
}

declare dso_local %struct.eic* @get_irq_chip_data(i32) #1

declare dso_local i32 @eic_writel(%struct.eic*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
